name:                paths
version:             0.0.0
synopsis:            Typed paths
description:         Typed paths
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2015 Chris Done
category:            Filesystem
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Path, Path.Internal
  build-depends:     base >= 4 && <5
                   , exceptions
                   , filepath
                   , template-haskell

test-suite test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: HUnit
                 , base
                 , hspec
                 , mtl
                 , paths
